# cmd/server/main.go
@@ -9,9 +9,7 @@ package main
 // @name Authorization
 
 import (
-	"log"
 	"os"
-	"strconv"
 
 	// Framework
 	//
@@ -77,14 +75,8 @@ func main() {
 	// Create logger service
 	loggerService := logger.NewConsole()
 
-	// Convert log level to int
-	logLevel, err := strconv.Atoi(os.Getenv("LOG_LEVEL"))
-	if err != nil {
-		log.Fatalf("invalid log level")
-	}
-
 	// Set log level
-	loggerService.SetLevel(logLevel)
+	loggerService.SetLevel(config.GetEnvInt("LOG_LEVEL"))
 
 	// Create telemetry service
 	telemetryService := telemetry.NewSecureGrpc(cfg)
@@ -307,33 +299,49 @@ func main() {
 			http.MethodPost,
 			"/users/auth/token/validate",
 			usersHandler.AuthTokenValidate,
+		).
+		// Logout current device
+		AddRoute(
+			http.MethodPost,
+			"/users/auth/logout",
+			usersHandler.AuthLogout,
+			usersHandler.AuthMiddleware(),
+		).
+		// Logout all devices
+		AddRoute(
+			http.MethodPost,
+			"/users/auth/logout/all",
+			usersHandler.AuthLogoutAll,
+			usersHandler.AuthMiddleware(),
+		).
+		// Logout target device
+		AddRoute(
+			http.MethodPost,
+			"/users/auth/logout/device",
+			usersHandler.AuthLogoutDevice,
+			usersHandler.AuthMiddleware(),
+		).
+		// Active devices
+		AddRoute(
+			http.MethodGet,
+			"/users/auth/devices",
+			usersHandler.AuthDevices,
+			usersHandler.AuthMiddleware(),
 		)
-
-	// Convert service port to int
-	servicePort, err := strconv.Atoi(os.Getenv("SERVICE_PORT"))
-	if err != nil || servicePort <= 0 {
-		log.Fatalf("invalid service port")
-	}
 
 	// Register service
 	if err := httpServer.RegisterService(
 		os.Getenv("SERVICE_NAME"),
 		os.Getenv("SERVICE_HOST"),
-		servicePort,
+		config.GetEnvInt("SERVICE_PORT"),
 	); err != nil {
 		loggerService.Log().Err(err).Send()
-	}
-
-	// Convert server port to int
-	serverPort, err := strconv.Atoi(os.Getenv("SERVER_PORT"))
-	if err != nil || serverPort <= 0 {
-		log.Fatal("invalid server port")
 	}
 
 	// Listen http server
 	if err := <-httpServer.Listen(
 		os.Getenv("SERVER_HOST"),
-		serverPort,
+		config.GetEnvInt("SERVER_PORT"),
 	); err != nil {
 		loggerService.Log().Err(err).Send()
 	}
